--- a/Atelier2_Regression.ipynb
+++ b/Atelier2_Regression.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Note 1 : Un pieds² fait environ 0,092 m²\n",
     "\n",
-    "Note 2 : Le fichier de données est sous forme csv, vous le trouverez en : _/project/notebooks_masterCHPS_achemchem/Formation/Boston.csv_\n",
+    "Note 2 : Le fichier de données est sous forme csv, vous le trouverez en : _/datasets/Boston.csv_\n",
     "\n"
    ]
   },
