--- a/Atelier1_Apprentissage_supervisé_et_non_supervisé.ipynb
+++ b/Atelier1_Apprentissage_supervisé_et_non_supervisé.ipynb
@@ -1,4 +1,4 @@
-{
+cs{
  "cells": [
   {
    "cell_type": "markdown",
@@ -348,7 +348,7 @@
     "# importation des lib\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('/project/notebooks_masterCHPS_achemchem/M1/Iris.csv')\n",
+    "df = pd.read_csv('datasets/Iris.csv')\n",
     "df.head()\n"
    ]
   },
