les bons chemins

--- a/Atelier1_Apprentissage_supervisé_et_non_supervisé.ipynb
+++ b/Atelier1_Apprentissage_supervisé_et_non_supervisé.ipynb
@@ -1087,7 +1087,7 @@ cs{
     }
    ],
    "source": [
-    "df = pd.read_csv('/project/notebooks_masterCHPS_achemchem/M1/Iris.csv')\n",
+    "df = pd.read_csv('datasets/Iris.csv')\n",
     "df.head()"
    ]
   },
