--- a/Atelier2_Regression.ipynb
+++ b/Atelier2_Regression.ipynb
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"/project/notebooks_masterCHPS_achemchem/Formation/Boston.csv\")\n",
+    "df = pd.read_csv(\"datasets/Boston.csv\")\n",
     "df=df.drop(columns=['Unnamed: 0'], axis =1 )\n"
    ]
   },
